--- a/templates/register.html
+++ b/templates/register.html
@@ -173,34 +173,53 @@
         </div>
 
         <form action="{{ url_for('register') }}" method="post" id="registerForm">
-            <div class="input-group">
-                <i class="fas fa-user"></i>
-                <input type="text" name="username" class="form-control" placeholder="Choose a username" required>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-user"></i>
+                    <input type="text" name="username" class="form-control" placeholder="Choose a username" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <i class="fas fa-envelope"></i>
-                <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-envelope"></i>
+                    <input type="email" name="email" class="form-control" placeholder="Enter your email" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <i class="fas fa-lock"></i>
-                <input type="password" name="password" class="form-control" placeholder="Create a password" required>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-lock"></i>
+                    <input type="password" name="password" class="form-control" placeholder="Create a password" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <i class="fas fa-id-card"></i>
-                <input type="text" name="name" class="form-control" placeholder="Enter your full name" required>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-id-card"></i>
+                    <input type="text" name="first_name" class="form-control" placeholder="Enter your first name" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <i class="fas fa-phone"></i>
-                <input type="tel" name="phone" class="form-control" placeholder="Enter your phone number" required>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-id-card"></i>
+                    <input type="text" name="last_name" class="form-control" placeholder="Enter your last name" required>
+                </div>
             </div>
 
-            <div class="input-group">
-                <i class="fas fa-home"></i>
-                <textarea name="address" class="form-control" placeholder="Enter your address" required></textarea>
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-phone"></i>
+                    <input type="tel" name="phone" class="form-control" placeholder="Enter your phone number" required>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="input-group">
+                    <i class="fas fa-home"></i>
+                    <textarea name="address" class="form-control" placeholder="Enter your address" required></textarea>
+                </div>
             </div>
 
             <button type="submit" class="btn btn-register">
