--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -241,12 +241,12 @@
                 <div class="card mb-4">
                     <div class="card-header bg-dark text-white">
                         <h5 class="mb-0">
-                            <i class="fas fa-user"></i> Welcome, {{ username }}!
+                            <i class="fas fa-user"></i> Welcome, {{first_name}}!
                         </h5>
                     </div>
                     <div class="card-body">
                         <h6 class="text-muted">Available Balance</h6>
-                        <h2 class="text-primary">${{ "{:,.2f}".format(wallet_balance + portfolio_value) }}</h2>
+                        <h2 class="text-primary">${{ "{:,.2f}".format(wallet_balance) }}</h2>
                                                 
     
                     </div>
