Changed Total Assets to Net Worth

--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -32,7 +32,7 @@
     </div>
     <div class="col-md-4">
         <div class="stat-card">
-            <div class="stat-label">Total Assets</div>
+            <div class="stat-label">Net Worth</div>
             <div class="stat-value">${{ "{:,.2f}".format(total_value + wallet_balance) }}</div>
         </div>
     </div>
